# OTA-C

./: .gitignore  OTA-C.code-workspace  README.md
ProjectRoot/: CMakeLists.txt
ProjectRoot/bash/: CA_leaf_run.sh  calibration.sh  node_git_update.sh  restart_all.sh  run_sync_tests.sh  sigint_mysession.sh  software_install.sh  trigger_all.sh
ProjectRoot/calibration/: claib_1009_32B1728_3.55e9_r05_t01.pickle  claib_1009_32B1728_3.55e9_r05_t01_02.pickle  claib_1009_32B1728_3.55e9_r2_t05_03.pickle  lsusb_details.json  rs_nrp.py  rs_sma.py  rx_calib_{3237C3E}.pickle  rx_calib_{32B1708}.pickle  rx_calib_{32B1728}.pickle  rx_calib_{32B172B}.pickle  rx_calib_{32C7920}.pickle  rx_calib_{32C793E}.pickle  rx_calib_{32C7981}.pickle  rx_calib_{32C79BE}.pickle  rx_calib_{32C79C6}.pickle  rx_calib_{32C79F7}.pickle  rx_calib_{337D402}_01.pickle  rx_calib_{337D42D}.pickle  rx_calib_{337D433}.pickle  rx_calib_{337D43D}.pickle  rx_calib_{337D43E}.pickle  rx_calib_{33802D5}.pickle  tx_calib_.pickle  tx_calib_32B172B.pickle  tx_calib_32B172B_02.pickle  tx_calib_32B172B_03.pickle  tx_calib_{3237C3E}_01.pickle  tx_calib_{337D402}_01.pickle  tx_calib_{337D433}_01.pickle  tx_calib_{337D43D}_01.pickle  tx_calib_{337D43E}_01.pickle  tx_calib_{33802D5}_01.pickle
ProjectRoot/config/: config.conf  devices.json  mqtt_topics.conf
ProjectRoot/config/filters/: fir_order_51_downscale_10.csv
ProjectRoot/config/mosquitto/: mosquitto.conf  mosquitto.db  telemetry.db
ProjectRoot/include/: pch.hpp
ProjectRoot/include/lib_cal/: calibration.hpp
ProjectRoot/include/lib_config/: ConfigParser.hpp  config_parser.hpp
ProjectRoot/include/lib_csd/: circular_buffer.hpp  circular_packet.hpp  cyclestartdetector.hpp  peakdetector.hpp
ProjectRoot/include/lib_fft/: FFTWrapper.hpp
ProjectRoot/include/lib_log/: log_exception.hpp  log_levels.hpp  log_macros.hpp  logger.hpp
ProjectRoot/include/lib_mqtt/: MQTTClient.hpp
ProjectRoot/include/lib_otac/: otac_processor.hpp
ProjectRoot/include/lib_sync/: sync_test.hpp
ProjectRoot/include/lib_synctest/: synctest.hpp
ProjectRoot/include/lib_usrp/: USRPclass.hpp  usrp_class.hpp  usrp_init.hpp
ProjectRoot/include/lib_utils/: Utility.hpp  utility.hpp
ProjectRoot/include/lib_waveform/: Waveforms.hpp  waveforms.hpp
ProjectRoot/main/: centralized_otac.cpp  test_log.cpp
ProjectRoot/main/analysis/: rx_to_file.cpp  rx_with_callback.cpp  tx_zfc.cpp
ProjectRoot/main/calibration/: calibration.cpp  cent_calib_feedback.cpp  leaf_calib_feedback.cpp  rx_calib.cpp  tx_calib.cpp
ProjectRoot/main/centralized_arch/: .config.conf.swp  calibration.cpp  cent.cpp  cent_calib.cpp  cent_sync_test.cpp  clock_test_cent.cpp  config.conf  devs_info.conf  leaf.cpp
ProjectRoot/main/experiments/: ex_leaf_timers.cpp  rx_to_file.cpp  tx_zfc.cpp
ProjectRoot/main/experiments/tests/: csd_peakdet_test.cpp
ProjectRoot/python/: mqtt_listener.py  plot_calib_res.py  publish_calibration.py  update_git_repos.py
ProjectRoot/src/lib_cal/: calibration.cpp
ProjectRoot/src/lib_config/: ConfigParser.cpp  config_parser.cpp
ProjectRoot/src/lib_csd/: circular_buffer.cpp  circular_packet.cpp  cyclestartdetector.cpp  peakdetector.cpp
ProjectRoot/src/lib_fft/: FFTWrapper.cpp
ProjectRoot/src/lib_log/: logger.cpp
ProjectRoot/src/lib_mqtt/: MQTTClient.cpp
ProjectRoot/src/lib_otac/: otac_processor.cpp
ProjectRoot/src/lib_sync/: sync_test.cpp
ProjectRoot/src/lib_usrp/: USRPclass.cpp  usrp_class.cpp  usrp_init.cpp
ProjectRoot/src/lib_utils/: Utility.cpp  utility.cpp
ProjectRoot/src/lib_waveform/: Waveforms.cpp  waveforms.cpp
cpp/: CMakeLists copy.txt  CMakeLists.txt  CSD_upsamp.cpp  ConfigParser.cpp  ConfigParser.hpp  CycleStartDetector.cpp  CycleStartDetector.hpp  CycleStartDetectorTest.cpp  OFDM.cpp  OFDM.hpp  PeakDetection.cpp  PeakDetection.hpp  USRP_class.cpp  USRP_class.hpp  _CMakeLists.txt  csdtest_gather_data.ipynb  leaf_config.conf  leaf_node.cpp  leaf_response_analysis.ipynb  logger.hpp  process_rx_with_refs.ipynb  rx_to_file.cpp  save_corr_data_analysis.ipynb  single test.ipynb  sync_tests.ipynb  test_USRP_init.cpp  test_cyclestartdetector.cpp  test_sync_cent.cpp  test_sync_leaf.cpp  test_zfc_rx.ipynb  transmit_zfc.cpp  transmit_zfc_fft.cpp  tx_rx_zfc.cpp  usrp_routines.cpp  usrp_routines.hpp  utility_funcs.cpp  utility_funcs.hpp  waveforms.cpp  waveforms.hpp
cpp/channel_sounding/: rx_peak_timer.cpp  rx_to_file.cpp  tx_from_file.cpp  tx_waveform.cpp  tx_zfc_ofdm.cpp
docker/: base.dockerfile  dockerfile
python/: otac_scheme.py
shell/: cent_node_test.sh  cyclestartdetector_MCrun.sh  gather_logs.sh  leaf_nodes_id.conf  leaf_test.sh  node_git_update.sh  run_sync_tests.sh  scp_rand_seqs.sh  screenlog.0
